Updates for heroku deployment

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 PORT=3000
-MONGO_URI = mongodb+srv://admin:admin@alpha.1n0fl.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
-CMS_API_URL=http://localhost:5000/api
-ADMIN_SERVICE_URL=http://localhost:5000/api/admin
-USERS_SERVICE_URL=http://localhost:5000/api/users
-API_KEY_SERVICE_URL=http://localhost:5000/api/keys
-UM_MEDIA_SERVICE_URL=http://localhost:5000/api/media
+MONGO_URI = mongodb+srv://admin:admin@alpha.1n0fl.mongodb.net/StormyMeadowlark?retryWrites=true&w=majority&appName=Alpha
+CMS_API_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api
+ADMIN_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/admin
+USERS_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/users
+API_KEY_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/keys
+UM_MEDIA_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/media
 JWT_SECRET=ASIDSAIOEF1ANKSD897AQlWPI1032DFSAJOFDSAO54PEWAML
 
-ANALYTICS_SERVICE_URL=http://localhost:5001/api/analytics
-CATEGORY_SERVICE_URL=http://localhost:5001/api/cateogries
-COMMENT_SERVICE_URL=http://localhost:5001/api/comments
-MEDIA_SERVICE_URL=http://localhost:5001/api/media
-NEWSLETTER_SERVICE_URL=http://localhost:5001/api/newsletters
-POST_SERVICE_URL=http://localhost:5001/api/posts
-SOCIAL_MEDIA_SERVICE_URL=http://localhost:5001/api/social-media
-TAG_SERVICE_URL=http://localhost:5001/api/tags
+ANALYTICS_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/analytics
+CATEGORY_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/cateogries
+COMMENT_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/comments
+MEDIA_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/media
+NEWSLETTER_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/newsletters
+POST_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/posts
+SOCIAL_MEDIA_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/social-media
+TAG_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/tags
