--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-PORT=3000
+PORT=3005
 MONGO_URI = mongodb+srv://admin:admin@alpha.1n0fl.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
 CMS_API_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api
 ADMIN_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/admin
 USERS_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/users
 API_KEY_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/keys
 UM_MEDIA_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/media
+TENANT_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/tenants
 JWT_SECRET=ASIDSAIOEF1ANKSD897AQlWPI1032DFSAJOFDSAO54PEWAML
 
 ANALYTICS_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/analytics
