basic posting and user functionality exists

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ ANOTHER_ONE= http://localhost:5000/api/users
 USERS_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/users
 API_KEY_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/keys
 UM_MEDIA_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/media
+ANOTHER_ONE=http://localhost:5000/api/tenants
 TENANT_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/tenants
 JWT_SECRET=ASIDSAIOEF1ANKSD897AQlWPI1032DFSAJOFDSAO54PEWAML
 ANOTHER_ONE=http://localhost:5001/api
