working on getting uploads avalible

--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@ CMS_API_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/
 ANALYTICS_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/analytics
 CATEGORY_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/cateogries
 COMMENT_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/comments
-MEDIA_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/media
+MEDIA_SERVICE_URL=http://localhost:5001/api/media
+ANOTHER_ONE=https://skynetrix-cms-5254b0438343.herokuapp.com/api/media
 NEWSLETTER_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/newsletters
 ANOTHER_ONE= http://localhost:5001/api/posts
 POST_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/posts
