--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ USERS_SERVICE_URL= http://localhost:5000/api/users
 Anotherone=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/users
 API_KEY_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/keys
 UM_MEDIA_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/media
-TENANT_SERVICE_URL=http://localhost:5000/api/tenants
-Anotherone=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/tenants
+Anotherone=http://localhost:5000/api/tenants
+TENANT_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/tenants
 JWT_SECRET=ASIDSAIOEF1ANKSD897AQlWPI1032DFSAJOFDSAO54PEWAML
 CMS_API_URL=http://localhost:5001/api
 Anotherone=https://skynetrix-cms-5254b0438343.herokuapp.com/api/
