--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT=3000
 MONGO_URI = mongodb+srv://admin:admin@alpha.1n0fl.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
 
 ADMIN_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/admin
-Anotherone= http://localhost:5000/api/users
-USERS_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/users
+USERS_SERVICE_URL= http://localhost:5000/api/users
+Anotherone=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/users
 API_KEY_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/keys
 UM_MEDIA_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/media
 Anotherone=http://localhost:5000/api/tenants
