--- a/.env
+++ b/.env
@@ -28,9 +28,9 @@ ORGANIZATION_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuap
 anotherone=http://localhost:5000/api/organization
 
 
-
-VEHICLE_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/vehicles
-anotherone=http://localhost:4000/api/vehicles
+SALES_SERVICE_URL=http://localhost:4000/api/sales
+anotherone=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/vehicles
+VEHICLE_SERVICE_URL=http://localhost:4000/api/vehicles
 VEHICLE_MEDIA_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/media
 anotherone=http://localhost:4000/api/media
 
