always forggeting minor details

--- a/.env
+++ b/.env
@@ -27,10 +27,10 @@ EMAIL_SERVICE_URL=https://skynetrix-cms-5254b0438343.herokuapp.com/api/email
 ORGANIZATION_SERVICE_URL=https://skynetrix-user-management-ad21b5714f45.herokuapp.com/api/organization
 anotherone=http://localhost:5000/api/organization
 
-
-SALES_SERVICE_URL=http://localhost:4000/api/sales
-anotherone=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/vehicles
-VEHICLE_SERVICE_URL=http://localhost:4000/api/vehicles
+anotherone=http://localhost:4000/api/sales
+SALES_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/sales
+VEHICLE_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/vehicles
+anotherone=http://localhost:4000/api/vehicles
 VEHICLE_MEDIA_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/media
 anotherone=http://localhost:4000/api/media
 
