--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ anotherone=http://localhost:5000/api/organization
 anotherone=http://localhost:4000/api/sales
 SALES_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/sales
 VEHICLE_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/vehicles
-anotherone=http://localhost:4000/api/vehicles
+anotheroneL=http://localhost:4000/api/vehicles
 VEHICLE_MEDIA_SERVICE_URL=https://skynetrix-vehicle-inventory-8b86da4af876.herokuapp.com/media
 anotherone=http://localhost:4000/api/media
 
